apps/n8n/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: default
  # annotations:
  #   traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: n8n.hexagonlabs.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
